using defaultValue and fixed spacings

--- a/src/components/CSS/home.css
+++ b/src/components/CSS/home.css
@@ -33,9 +33,22 @@ body {
   margin: 0px;
   padding: 0px;
 
+} 
+ .table {
+  --bs-table-striped-bg: #4abdac83; striped color
+ 
 } */
-.table {
-  --bs-table-striped-bg: #4abdac83; /*striped color*/
+
+.col-sm-6 {
+  margin-bottom: 15px;
+}
+
+a {
+  display: block;
+}
+
+.pagination {
+  justify-content: flex-end;
 }
 
 @media (max-width: 767.98px) {
